--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "ketchup": "git fetch && git reset --hard origin/lecture",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
+    "resetdb": "npm run rollback && npm run migrate && npm run seed",
     "seed": "knex seed:run"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "knex-cleaner": "^1.3.1",
     "knex": "^2.4.2",
+    "knex-cleaner": "^1.3.1",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
