--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^4.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "knex": "^2.4.2",
